src/app.css
@import url(wtwg-reset.css);
@import url(../static/fonts/langdon/stylesheet.css);
:root {
    /* color variables*/
    --grey: rgb(17, 17, 17);
    --grey-accent: rgb(37, 37, 37);
    --grey-light: rgb(194, 194, 194);
    --yellow: rgb(220, 237, 34);
    --yellow-accent: rgb(185, 202, 0);
    --red: rgb(145, 25, 0);
    --red-faded: rgb(87, 61, 56);
    --off-white: rgb(223, 216, 210);
    --white: rgb(255, 255, 255);

    /* dimension variables*/
    --nav-top: 20px;
    --nav-bottom: 80px;
    --nav-height: 60px;
    --header: 115px;
    
}
/* ===== Scrollbar CSS ===== */
  /* Firefox */
  * {
    scrollbar-width: auto;
    scrollbar-color: var(--grey-accent) var(--off-white);
  }

  /* Chrome, Edge, and Safari */
  *::-webkit-scrollbar {
    width: 12px;
  }

  *::-webkit-scrollbar-track {
    background: var(--off-white);
  }

  *::-webkit-scrollbar-thumb {
    background-color: var(--grey-accent);
    border-radius: 6px;
    border: 2px ridge var(--white);
  }

body {
    font-family: sans-serif;

}

a {
    color: var(--red);
    text-decoration: underline;
    font-weight: bold;
}

a:visited {
    color: var(--red-faded);

}

h1, h2, h3, h4, h5, h6 {
    font-family: langdon;
    text-transform: uppercase;
}

.container {
    display: flex;
    justify-content: center;
}

.container-contents {
    width: 1024px;
    margin: 2em;
}
@media screen and (max-width:1024px){
  .container-contents {
    width:100%;
  }
}

hr {
  border: solid var(--red-faded) .1px;
  border-top-width: 0px;
}



footer 	a {
  color: var(--yellow);
}
footer a:visited {
  color: var(--grey-light);
}

.svg-filter-white {
  filter: invert(97%) sepia(0%) saturate(7500%) hue-rotate(162deg) brightness(104%) contrast(99%);
}

